--- a/tatam.css
+++ b/tatam.css
@@ -1,247 +1,217 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,600");
+  
 *{
+  font-family: 'Poppins', sans-serif;
+}
+
+body, #chart-area, #widget-container, .tv-main-panel {
+  font-family: 'Inter', sans-serif;
+color: black;
+border: none;
+}
+
+
+
+
+.chart-page .chart-container {
+border: none;
+}
+
+#d1 {width: 100%;height:50%; margin:0 auto;}
+
+.t1{
+  margin-left: 20px;
+  margin-top: 20px;    
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-  
-} 
+  font-family: 'Inter', sans-serif;
+}
 
-.responsive {
-  position: inherit;
-  height: 18.5rem;
-  
-  width: auto;
-  align-items: center;
-
- }
- 
- .text{
-   text-align: center;
-   font-size: 40px;
- }
- 
-nav{
+div#tab-wrapper {
   display: flex;
-  height: 80px;
+  flex-direction: column;
   width: 100%;
-  background: white; 
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 50px 0 100px;
-  flex-wrap: wrap;
+  height: 100%;
+margin-top: 20px;
+  background-color: white;
 }
-nav .logo{
-  color: black;
-  font-size: 25px;
-  font-weight: 600;
-}
-nav ul{
-  display: flex;
-  flex-wrap: wrap;
+
+div#tab-wrapper > ul#tab-buttons {
+
   list-style: none;
-}
-nav ul li{
-  margin: 0 5px;
-}
-nav ul li a{
-  color: #f2f2f2;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 8px 15px;
-  border-radius: 15px;
-  letter-spacing: 1px;
-  transition: all 0.3s ease;
-}
-nav ul li a.active,
-nav ul li a:hover{
-  color: white;
-  background: #fff;
-}
-nav .menu-btn i{
-  color: #fff;
-  font-size: 22px;
-  cursor: pointer;
-  display: none;
-}
-input[type="checkbox"]{
-  display: none;
-}
-@media (max-width: 1000px){
-  nav{
-    padding: 0 40px 0 50px;
-  }
-}
-@media (max-width: 920px) {
-  nav .menu-btn i{
-    display: block;
-  }
-  #click:checked ~ .menu-btn i:before{
-    content: "\f00d";
-  }
-  nav ul{
-    position: fixed;
-    top: 80px;
-    left: -100%;
-    background: white;
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    display: block;
-    transition: all 0.3s ease;
-  }
-  #click:checked ~ ul{
-    left: 0;
-  }
-  nav ul li{
-    width: 100%;
-    margin: 40px 0;
-  }
-  nav ul li a{
-    width: 100%;
-    margin-left: -100%;
-    display: block;
-    font-size: 20px;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    color: black;
-  }
-  #click:checked ~ ul li a{
-    margin-left: 0px;
-  }
-  nav ul li a.active,
-  nav ul li a:hover{
-    background: none;
-    color: blue;
-  }
-}
-.content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  z-index: -1;
-  width: 100%;
-  padding: 0 30px;
-  color: black;
-}
-.content div{
-  font-size: 40px;
-  font-weight: 700;
-}
-
-
-.column {
-  float: left;
-  width: 25%;
-  padding: 0 10px;
-}
-
-
-.row {margin: 0 -5px;
-
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 16px;
-  text-align: center;
-  background-color: #f1f1f1;
-}
-a{
-  text-decoration: none;
-  color: black;
-  font-size: 20px;
-  font-weight: 1000;
-
-}
-
-#s1{
-  font-size: 10px;
-  padding: 50px;
-  position: absolute;
-  left: 27%;
-  top: 85%;
-  text-align: center;
-}
-
-
-html, body, section {
-  block-size: 100%;
-  color: #000;
-}
-
-html {
-  scroll-snap-type: y mandatory;
-}
-
-section {
-  scroll-snap-align: start;
-  /* scroll-snap-stop: always; */
-}
-
-
-
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
-  font-family: 'Poppins', sans-serif;
-}
-
-.view {
-  height: 10%;
-  width: 100%;
-  background: #fcfcfc;
-  overflow-y: scroll;
-}
-
-.card__list {
-  padding: 0.75rem;
-}
-.card__item {
-  margin: 0 0 0.75rem;
-  padding: 1.25rem 1.5rem;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
-  background: white;
-  cursor: pointer;
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-}
-.card__item:hover {
-  background: #444;
-  color: #fff;
-}
-.card__item:hover .info-player__num {
-  transform: scale(1.1);
-}
-
-
-
-
-.card__info .info-player__name {
-  line-height: 1.1;
-  font-size: 20px;
+  border-bottom: 1px solid #ccc;
+  padding: 0;
   margin: 0;
-  font-weight: 500;
+  width: 100%;
+  font-family: 'Inter', sans-serif;
+}
+
+ul#tab-buttons > li {
+  margin: 0 -1px 0 0;
+  padding: 1rem;
+  width: 100%;
   display: flex;
-  text-align: center;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
+  text-align: center;
+  border-color: #dbdbdb;
+  /* border-radius: 6px 6px 0 0; */
+
+  background-image: none, -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.01)), to(rgba(0, 0, 0, 0.08)));
+  background-image: none, -webkit-linear-gradient(top, rgba(0, 0, 0, 0.01) 0, rgba(0, 0, 0, 0.08) 100%);
+  background-image: none, linear-gradient(to bottom, rgba(0, 0, 0, 0.01) 0, rgba(0, 0, 0, 0.08) 100%);
+  background-repeat: repeat;
+  background-position: 50% 50%;
+  background-color: #fff;
+  overflow: hidden;
+  border-style: solid;
+  border-width: 1px 1px 0;
+  /* border-top-width: 2.5px; */
+}
+
+ul#tab-buttons > li:hover {
+  cursor: pointer;
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+ul#tab-buttons > li.active {
+  background-color: gray;
+  background-image: none;
+  border-bottom-width: 1px;
+  /* margin-bottom: -1px;
+  padding-bottom: 0; */
+  border-color: #ccc;
+  border-bottom-color: #fff;
+}
+
+div#tab-wrapper > div#tab-content {
+  display: block;
+  margin-top: 1rem;
+  width: 100%;
+  height: 100%;
+}
+
+div > #tab-content > .tab {
+  
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  opacity: 0;
+  transition: all 500ms;
+}
+
+div > #tab-content > .tab.active {
+  visibility: visible;
+  opacity: 1;
+  transition: all 500ms;
+}
+
+div > #tab-content > .tab.active > .row {
+  
+  margin: 1rem 0;
+  padding: 1rem;
+  height: 50%;
+  background: blue;
+}
+
+div > #tab-content > .tab.active > .row:first-child {
+  margin-top: 0;
 }
 
 
+h4 {
+  margin: 5px 20px;
+}
+span {
+  float: right;
+  margin-right: 10px;
+  font-size: 12px;
+  font-weight: 300;
+}
+hr {
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0,0,0,0.1);
+  border-bottom: 1px solid rgba(255,255,255,0.3);
+}
+.container {
+  display: flex;
+  justify-content: center;
+}
+.comment-box {
+  width: 100%;
+ 
+  background: #fff;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.comment-box p {
+  /* margin: 0 30px 15px; */
+  font-weight: 300;
+  color: #333;
+  word-wrap: break-word;
+  background: #eee;
+  padding: 5px 10px;
+}
+.header {
+  margin: 15px 20px;
+  font-size: 27px;
+  font-weight: 600;
+}
+form {
+  margin: 10px 10px 30px 10px;
+}
+form ::-webkit-input-placeholder {
+  color: #ccc;
+  font-weight: 300;
+}
+input[type="text"],
+textarea {
+  margin: 5px 10px;
+  outline: none;
+  background: #efefef;
+  border: 0;
+  padding: 10px;
+}
+textarea {
+  resize: none;
+  width: 85%;
+}
+input[type="text"] {
+  width: 50%;
+  margin-bottom: 15px;
+}
+button {
+  font-weight: 400;
+  margin: 12px 0 0 10px;
+  border: 0;
+  border-radius: 20px;
+  color: #fff;
+  font-size: 20px;
+  background: #000000;
+  padding: 12px 20px 12px 20px;
+  text-decoration: none;
+  outline: none;
+  transition: all 0.2s ease;
+
+}
+button:hover {
+  background: #c15322;
+}
+.footer p {
+  float: right;
+  font-size: 13px;
+  margin-bottom: 10px;
+  background: #fff;
+}
