--- a/tatam.css
+++ b/tatam.css
@@ -13,7 +13,6 @@ border: none;
 
 
 
-
 .chart-page .chart-container {
 border: none;
 }
@@ -44,7 +43,7 @@ margin-top: 20px;
 }
 
 div#tab-wrapper > ul#tab-buttons {
-
+  display: flex;
   list-style: none;
   border-bottom: 1px solid #ccc;
   padding: 0;
@@ -100,7 +99,7 @@ div#tab-wrapper > div#tab-content {
 }
 
 div > #tab-content > .tab {
-  
+  position: absolute;
   visibility: hidden;
   display: flex;
   flex-direction: column;
@@ -116,7 +115,7 @@ div > #tab-content > .tab.active {
 }
 
 div > #tab-content > .tab.active > .row {
-  
+ 
   margin: 1rem 0;
   padding: 1rem;
   height: 50%;
