--- a/tatam.css
+++ b/tatam.css
@@ -114,7 +114,7 @@ div > #tab-content > .tab.active {
   transition: all 500ms;
 }
 
-div > #tab-content > .tab.active > .row {
+div > .tab.active > .row {
  
   margin: 1rem 0;
   padding: 1rem;
