--- a/tatam.css
+++ b/tatam.css
@@ -22,6 +22,15 @@ border: none;
   margin-top: 20px;    
 }
 
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+}
+
 div#tab-wrapper {
  
   flex-direction: column;
@@ -45,6 +54,7 @@ ul#tab-buttons > li {
   margin: 0 -1px 0 0;
   padding: 1rem;
   width: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -68,8 +78,10 @@ ul#tab-buttons > li:hover {
   background-color: #fff;
   border-color: #ccc;
 }
+ul#tab-buttons{ display:inline-block;}
 
 ul#tab-buttons > li.active {
+  
   background-color: gray;
   background-image: none;
   border-bottom-width: 1px;
