--- a/tatam.css
+++ b/tatam.css
@@ -9,11 +9,18 @@ body, #chart-area, #widget-container, .tv-main-panel {
   font-family: 'Inter', sans-serif;
 color: black;
 border: none;
-} 
+}
+
+iframe{
+  background-color: transparent;
+  color: #000000;
+  font-family: 'Poppins', sans-serif;
+  border: none;
+}
+
 
 .chart-page .chart-container {
 border: none;
-width:100%
 }
 
 #d1 {width: 100%;height:50%; margin:0 auto;}
@@ -33,16 +40,15 @@ body {
 }
 
 div#tab-wrapper {
- 
+  display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 100%; 
   height: 100%;
 margin-top: 20px;
   background-color: white;
 }
 
 div#tab-wrapper > ul#tab-buttons {
-   
   list-style: none;
   border-bottom: 1px solid #ccc;
   padding: 0;
@@ -79,10 +85,8 @@ ul#tab-buttons > li:hover {
   background-color: #fff;
   border-color: #ccc;
 }
-ul#tab-buttons{ display:inline-block;}
 
 ul#tab-buttons > li.active {
-  
   background-color: gray;
   background-image: none;
   border-bottom-width: 1px;
@@ -93,15 +97,14 @@ ul#tab-buttons > li.active {
 }
 
 div#tab-wrapper > div#tab-content {
- 
   margin-top: 1rem;
   width: 100%;
   height: 100%;
 }
 
 div > #tab-content > .tab {
-
   visibility: hidden;
+  display: flex;
   flex-direction: column;
   width: 100%;
   opacity: 0;
@@ -114,8 +117,7 @@ div > #tab-content > .tab.active {
   transition: all 500ms;
 }
 
-div > .tab.active > .row {
-  
+div > #tab-content > .tab.active > .row {
   margin: 1rem 0;
   padding: 1rem;
   height: 50%;
