--- a/tatam.css
+++ b/tatam.css
@@ -42,13 +42,14 @@ body {
 div#tab-wrapper {
   display: flex;
   flex-direction: column;
-  width: 100%; 
+  width: 100%;
   height: 100%;
 margin-top: 20px;
   background-color: white;
 }
 
 div#tab-wrapper > ul#tab-buttons {
+  display: flex;
   list-style: none;
   border-bottom: 1px solid #ccc;
   padding: 0;
@@ -103,6 +104,7 @@ div#tab-wrapper > div#tab-content {
 }
 
 div > #tab-content > .tab {
+  position: absolute;
   visibility: hidden;
   display: flex;
   flex-direction: column;
@@ -118,7 +120,6 @@ div > #tab-content > .tab.active {
 }
 
 div > #tab-content > .tab.active > .row {
-  margin: 1rem 0;
   padding: 1rem;
   height: 50%;
   background: blue;
