--- a/tatam.css
+++ b/tatam.css
@@ -103,7 +103,7 @@ div#tab-wrapper > div#tab-content {
 }
 
 div > #tab-content > .tab {
-  position: absolute;
+  position: fixed;
   visibility: hidden;
   flex-direction: column;
   width: 100%;
